TAG: qcreports_db-6-0-12-2
DATE: 04/06/2018
STAFF: lec
CHANGES: TR12808/ALL_Progress.py

TAG: qcreports_db-6-0-12-1
DATE: 03/20/2018
STAFF: lec
CHANGES: TR12662/GMC
ALL_Notes.py/sequenceNum removed

TAG: qcreports_db-6-0-11-34
TAG: qcreports_db-6-0-11-33
DATE: 03/08/2018
STAFF: sc
CHANGES: TR12807
Update MRK_GOIEA D report ref in gxd logic to include Full-coded status.

TAG: qcreports_db-6-0-11-32
DATE: 02/26/2018
STAFF: sc
CHANGES: TR12779 - Recombinase reporter check
1) Added monthly/RECOMB_ReporterCheck.py and updated index file

TAG: qcreports_db-6-0-11-31
DATE: 02/26/2018
STAFF: sc
CHANGES:
1) TR12778 - ensuring correct gene for Cre portal assays
New RECOMB_Reporter.sql monthly report, qcr.shtml updated

TAG: qcreports_db-6-0-11-30
DATE: 02/26/2018
STAFF: lec
CHANGES:
1) qcr.shtml/#6 Master Bib QTL Indexing Report renamed to Literature Triage QTL Report

TAG: qcreports_db-6-0-11-29
DATE: 02/14/2018
STAFF: lec
CHANGES:
1) TR12773/MRK_MultCoordinate.sql

TAG: qcreports_db-6-0-11-28
DATE: 02/14/2018
STAFF: lec
CHANGES:
1) TR12777/new WF_SupplementalData.py

TAG: qcreports_db-6-0-11-27
DATE: 01/19/2018
STAFF: dbm
CHANGES:
1) RECOMB_SameStructure.py: convert stage to string type before using ljust()

TAG: qcreports_db-6-0-11-26
TAG: qcreports_db-6-0-11-25
TAG: qcreports_db-6-0-11-24
DATE: 01/03/2018
STAFF: sc
CHANGES: TR12672 - new QC report mgd/WF_GO_FullCodeNoAnnot.py
Added to qcr.shtml

TAG: qcreports_db-6-0-11-23
DATE: 12/20/2017
STAFF: lec
TR12717/weekly/WF_GXD_secondary.py

TAG: qcreports_db-6-0-11-22
TAG: qcreports_db-6-0-11-21
TAG: qcreports_db-6-0-11-20
DATE: 12/xxi1805/2017
STAFF: sc
updated htmpload index file impc_index.shtml --> index.shtml

TAG: qcreports_db-6-0-11-19
DATE: 12/05/2017
STAFF: lec
TR12682/weekly/BIB_StatusMismatch_GXD.sql

TAG: qcreports_db-6-0-11-18
DATE: 12/05/2017
STAFF: sc,lec
TR12684 remove date column from GXD_Triage report
TR12730/QTL_Triage.py changes

TAG: qcreports_db-6-0-11-17
DATE: 11/30/2017
STAFF: lec