@@ -7,7 +7,7 @@ and m._Marker_Status_key = 1
 and m.name like 'predicted gene%'
 and not exists (select 1 from SEQ_Marker_Cache c
 where m._Marker_key = c._Marker_key
-and c._LogicalDB_key in (59,60,85))
+and c._LogicalDB_key in (59,60))
 and m._Marker_key = a._Object_key
 and a._MGIType_key = 2
 and a._LogicalDB_Key = 1
