@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-13-?
+DATE:
+STAFF: lec  
+CHANGES: TR12734/GenFevah/Mouse Genome Project
+remove biotype_vega.config
+
 TAG: qcreports_db-6-0-12-2
 DATE: 04/06/2018
 STAFF: lec
